--- a/css/styles.css
+++ b/css/styles.css
@@ -1040,9 +1040,9 @@ nav .nav-group.right {
   height: 16em;
   width: 100%;
 }
-.list-recipes {
+/*.list-recipes {
   overflow: hidden;
-}
+}*/
 .item-recipe {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -1058,7 +1058,7 @@ nav .nav-group.right {
   position: absolute;
   top: auto;
   right: 0;
-  bottom: 0;
+  /*bottom: 0;*/
   left: 0;
   width: auto;
   height: auto;
